--- a/js/plugins/cloud-sql-pg/package.json
+++ b/js/plugins/cloud-sql-pg/package.json
@@ -31,16 +31,20 @@
   "author": "genkit",
   "license": "Apache-2.0",
   "dependencies": {
-    "ts-md5": "^1.3.1",
     "@google-cloud/cloud-sql-connector": "^1.6.0",
     "google-auth-library": "^9.15.0",
-    "knex": "^3.1.0"
+    "knex": "^3.1.0",
+    "ts-md5": "^1.3.1"
   },
   "peerDependencies": {
+    "@genkit-ai/core": "workspace:^",
     "genkit": "workspace:^"
   },
   "devDependencies": {
+    "@jest/globals": "^29.7.0",
+    "@types/dotenv": "^8.2.3",
     "@types/node": "^20.11.16",
+    "dotenv": "^16.4.5",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
     "tsup": "^8.3.5",
