--- a/js/plugins/cloud-sql-pg/package.json
+++ b/js/plugins/cloud-sql-pg/package.json
@@ -21,7 +21,8 @@
     "compile": "tsup-node",
     "build:clean": "rimraf ./lib",
     "build": "npm-run-all build:clean check compile",
-    "build:watch": "tsup-node --watch"
+    "build:watch": "tsup-node --watch",
+    "test": "jest --verbose"
   },
   "repository": {
     "type": "git",
@@ -34,19 +35,21 @@
     "@google-cloud/cloud-sql-connector": "^1.6.0",
     "google-auth-library": "^9.15.0",
     "knex": "^3.1.0",
-    "ts-md5": "^1.3.1"
+    "pg": "^8.15.6",
+    "uuid": "^11.1.0"
   },
   "peerDependencies": {
-    "@genkit-ai/core": "workspace:^",
     "genkit": "workspace:^"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
     "@types/dotenv": "^8.2.3",
     "@types/node": "^20.11.16",
+    "@types/uuid": "^10.0.0",
     "dotenv": "^16.4.5",
     "npm-run-all": "^4.1.5",
     "rimraf": "^6.0.1",
+    "ts-jest": "^29.1.2",
     "tsup": "^8.3.5",
     "tsx": "^4.19.2",
     "typescript": "^4.9.0"
